Styling of header image and removed category from blog content

--- a/style.css
+++ b/style.css
@@ -28,3 +28,7 @@
 #main_navigation_container #site_navigation .menu li a {
   font-size: 24pt;
 }
+
+#masthead-inner {
+  background-size: cover !important;
+}
