Added images to the work history section

--- a/inc/css/portfolio.css
+++ b/inc/css/portfolio.css
@@ -9,3 +9,8 @@
 #primary article .portfolio .page-content h3 {
   text-align: center;
 }
+
+.portfolio .portfolio-image {
+  text-align: center;
+  margin: 0 auto;
+}
