Comment sections for style.css

--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
   Version: 0.1
 */
 
+/****************************************
+************* Navigation ****************
+*****************************************/
+
 #main_navigation_container {
   border-radius: 4px;
   opacity: 0.5;
@@ -33,9 +37,21 @@
   background-size: cover !important;
 }
 
+
+
+/****************************************
+**************** Posts ******************
+*****************************************/
+
 .post-title {
   margin-bottom: 50px;
 }
+
+
+
+/****************************************
+**************** Misc *******************
+*****************************************/
 
 /* Fix hidden child comments */
 .children {
