--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
   border-radius: 4px;
   opacity: 0.5;
   transition: opacity 300ms ease-in-out;
+  height: 80px;
 }
 
 #main_navigation_container:hover {
@@ -42,6 +43,11 @@
   background-size: cover !important;
 }
 
+@media (min-width: 768px) {
+  #main_navigation_container #site_navigation {
+    height: 40px;
+  }
+}
 
 
 /****************************************
